# 2025_20644696

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  files.html  git-cheat-sheet.txt  globals.html  globals_func.html  hi_and_date.cmd  index.html  navtreedata.js  ws2_merge_note.txt
.github/workflows/: doxygen.yml
Worksheet3/: Worksheet3.cpp  Worksheet3.slnx  Worksheet3.vcxproj  Worksheet3.vcxproj.filters  calc.cpp  hello.cpp  libadder.exp  libadder.lib
Worksheet3/Worksheet3/x64/Debug/: Worksheet3.exe.recipe  Worksheet3.ilk  vc145.idb
Worksheet3/Worksheet3/x64/Debug/Worksheet3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Worksheet3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Worksheet3/adderdynamic/include/: adder.h
Worksheet3/adderstatic/lib/: libadder.lib
Worksheet4/build_shared/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calc.sln  calc.vcxproj  calc.vcxproj.filters  cmake_install.cmake  maths.vcxproj  maths.vcxproj.filters
Worksheet4/build_shared/Debug/: maths.exp  maths.lib
Worksheet4/build_shared/calc.dir/Debug/: calc.exe.recipe  calc.ilk
Worksheet4/build_shared/calc.dir/Debug/calc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Worksheet4/build_shared/maths.dir/Debug/: maths.dll.recipe  maths.ilk
Worksheet4/build_shared/maths.dir/Debug/maths.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+8 more)
Worksheet4/build_static/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calc.sln  calc.vcxproj  calc.vcxproj.filters  cmake_install.cmake  maths.vcxproj  maths.vcxproj.filters
Worksheet4/build_static/Debug/: maths.lib
Worksheet4/build_static/calc.dir/Debug/: calc.exe.recipe  calc.ilk
Worksheet4/build_static/maths.dir/Debug/: maths.lib.recipe
Worksheet4/src/: CMakeLists.txt  adder.h  main.cpp
Worksheet5/: CMakeLists.txt  Doxyfile  adder.cpp  adder.h  calc.cpp
Worksheet5/html/: adder_8cpp.html  adder_8cpp.js  adder_8h.html  adder_8h_source.html  calc_8cpp.html  calc_8cpp.js  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  navtreedata.js  navtreeindex0.js
Worksheet5/html/search/: all_0.js  files_0.js  functions_0.js  functions_1.js
Worksheet6/Worksheet6/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.ui
Worksheet7/Exercise3/Worksheet6/: CMakeLists.txt  ModelPart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Worksheet7/Exercise4/Worksheet6/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  mainwindow.cpp  mainwindow.h  optiondialog.h
(+27 files in other folders)
